--- a/app/assets/stylesheets/bootstrap_and_overrides_pdf.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides_pdf.css.scss
@@ -4470,7 +4470,8 @@ span.banner-heading{
       color: $brand-primary;
     }
     .value{
-      font-size: 28px;
+      font-size: 24px;
+      word-wrap: break-word;
     }
   }
   .powered_by{
